--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,11 +3,41 @@
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
   </header>
-
-  <div class="order-summary jumbotron">
+ 
+  <div class="alert alert-success ">
     <h4>Thank you for your order!</h4>
+    <h4>Confirmation Email: <%= @order.email %></h4>
   </div>
 
+  <div class="panel panel-default items">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2">Product</th>
+          <th>Unit Price</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      
+      <tbody>
+      <% @order.line_items.each do |item| %>
+        <%= render 'item', item: item, product: item.product, quantity: item[:quantity].to_i %>
+      <% end %>
+      </tbody>
+
+      <tfoot>
+        <tr>
+          <th colspan="4">
+            TOTAL:
+          </th>
+          <th>
+            <%= humanized_money_with_symbol @order.total_cents / 100.0 %>
+          </th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
 </section>
