--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -38,6 +38,7 @@
             <li><%= link_to 'Products',  [:admin, :products] %></li>
           </ul>
         </li>
+         <li><%= link_to 'About', about_index_path %></li>
         <li>
           <%= link_to cart_path do %>
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
