--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -10,8 +10,7 @@
         <tr>
         <th><%= link_to "Products", admin_products_path%></th>
           
-          <th>Categories</th>
-          <%# <th><%= link_to "Category", admin_categories_path%></th> %>
+          <th><%= link_to "Category", admin_categories_path%></th>
         </tr>
       </thead>
       <tbody>
