--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -26,7 +26,8 @@
           </ul>
         </li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right">  
+
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
@@ -44,6 +45,13 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+
+        <% if current_user %>
+        <li>  <a> Signed in as <%= current_user.name %>  </a> </li>
+        <li><%= link_to "Logout", '/logout' %> </li>
+        <% else %>
+        <li>  <%= link_to 'Login', '/login' %> </li> <li>  <%= link_to 'Signup', '/signup' %> </li>
+        <% end %>            
       </ul>
     </div>
   </div>
